# hack_latam

./: .gitignore  README.md  csi-trajectory-tracking-guide.md  presentacion.md  protocolo-deteccion.py  roadmap.md
CSI OFDM/: PROJECT_MANIFEST.md  app.js  engine.js  index.html  styles.css
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: BigReadout.jsx  DopplerTracks.jsx  EventLog.jsx  GlobeView.jsx  StatusBar.jsx  TopDownView.jsx
dashboard/src/hooks/: useEvents.js
firmware/rx_node/: CMakeLists.txt  sdkconfig.defaults
firmware/rx_node/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/sensor_node/: sensor_node.ino
firmware/tx_node/: CMakeLists.txt  sdkconfig.defaults
firmware/tx_node/main/: CMakeLists.txt  main.c
fresnel zone/: app.js  index.html  styles.css
fresnel zone/ml_backend/: app.py  config.py  dataset.py  infer.py  model.py  train.py
fusion/: config.py  csi_motion_detector.py  csi_timeseries.py  csi_viewer.py  main.py  receiver.py  test_tripwire.py  trajectory_solver.py  tripwire.py  webcam_yolo.py
fusion/data/run-20260517-055026/: meta.json  positions.jsonl
fusion/data7run-001/: meta.json  positions.jsonl
interferencia electromagnetica/: app.js  index.html  styles.css
simulacion/: README.md  gps.py  leo.py  protocol.py  starlink.csv  wave.py
